# RigelRenderer

./: .gitignore  Build.lua  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
RigelRenderer/: Build-Renderer.lua  CMakeLists.txt  NOTES.txt
RigelRenderer/built-in-resources/shaders/: fullscreen_texture_fragment.glsl  fullscreen_texture_vertex.glsl  geometry_pass_fragment.glsl  lighting_pass_fragment.glsl  plain_color_fragment.glsl  plain_color_vertex.glsl  texture_test_fragment.glsl
RigelRenderer/built-in-resources/shaders/deferred_rendering/: directional_light_fragment.glsl  geometry_pass_vertex.glsl  lighting_pass_fragment.glsl  lighting_pass_vertex.glsl  stencil_pass_vertex.glsl
RigelRenderer/built-in-resources/shaders/deferred_rendering/directional_light/: dir_light_no_shadows_fragment.glsl  dir_light_no_shadows_vertex.glsl  dir_light_shadows_no_pcf_fragment.glsl  dir_light_shadows_pcf_fragment.glsl  dir_light_vertex.glsl
RigelRenderer/built-in-resources/shaders/deferred_rendering/point_light/: point_light_no_shadows_fragment.glsl
RigelRenderer/built-in-resources/shaders/deferred_rendering/spot_light/: spot_light_no_shadows_fragment.glsl  spot_light_shadows_no_pcf_fragment.glsl  spot_light_shadows_pcf_fragment.glsl  spot_light_vertex.glsl
RigelRenderer/built-in-resources/shaders/shadow_mapping/: depth_map_fragment.glsl  depth_map_vertex.glsl  depth_visualization_fragment.glsl  depth_visualization_vertex.glsl
RigelRenderer/include/: RigelRenderer.hpp
RigelRenderer/include/components/: Material.hpp  MaterialLit.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp  Transform.hpp
RigelRenderer/include/input/: Input.hpp
RigelRenderer/include/modules/: Core.hpp  Cursor.hpp  Input.hpp  Time.hpp
RigelRenderer/include/objects/: Camera.hpp  DirectionalLight.hpp  Light.hpp  Object.hpp  PointLight.hpp  Renderable.hpp  Scene.hpp  SpotLight.hpp  Transform.hpp
RigelRenderer/include/objects/Renderable/: Renderable.hpp  RenderableMesh.hpp  RenderableModel.hpp
RigelRenderer/include/objects/lights/: DirectionalLight.hpp  Light.hpp  PointLight.hpp  SpotLight.hpp
RigelRenderer/include/objects/renderable/: CustomRenderable.hpp
RigelRenderer/include/publicUtility/: Assert.hpp  Logger.hpp
RigelRenderer/include/utility/: Logger.hpp
RigelRenderer/source/: RigelRenderer.cpp
RigelRenderer/source/components/: Material.cpp  MaterialLit.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  Transform.cpp
RigelRenderer/source/input/: Input.cpp
RigelRenderer/source/internal/glAbstraction/: GlAbstraction.hpp  IndexBuffer.cpp  LayoutElement.cpp  LayoutElement.hpp  Renderbuffer.cpp  Renderbuffer.hpp  UniformBuffer.cpp  VertexArray.hpp  VertexBuffer.cpp
RigelRenderer/source/internal/mesh/: Mesh.cpp  Mesh.hpp
RigelRenderer/source/internal/render/: GBuffer.cpp  GBuffer.hpp  RenderHandler.cpp  RenderHandler.hpp  Renderer.cpp  Renderer.hpp
RigelRenderer/source/internal/utility/: FreeTypeUtility.cpp  FreeTypeUtility.hpp  InputUtility.cpp  InputUtility.hpp  RenderUtility.hpp  stb_image.h
RigelRenderer/source/modules/: Core.cpp  Cursor.cpp  Input.cpp  Time.cpp
RigelRenderer/source/objects/: Camera.cpp  Object.cpp  Scene.cpp
RigelRenderer/source/objects/lights/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
RigelRenderer/source/objects/renderable/: RenderableMesh.cpp  RenderableModel.cpp
RigelRenderer/src/: RigelRenderer.cpp
RigelRenderer/src/built-in/: BuiltInShaders.hpp
RigelRenderer/src/components/: Material.cpp  MaterialLit.cpp  Mesh.cpp  Shader.cpp
RigelRenderer/src/include/: internal.hpp
RigelRenderer/src/include/core/: RigelRenderer.cpp  RigelRenderer.hpp
RigelRenderer/src/include/core/components/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Transform.cpp  Transform.hpp
RigelRenderer/src/include/core/input/: Keys.hpp
RigelRenderer/src/include/core/objects/: Camera.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  Object.hpp  PointLight.hpp  Renderable.cpp  Renderable.hpp  Scene.cpp  Scene.hpp  SpotLight.hpp
RigelRenderer/src/internal/glAbstraction/: IndexBuffer.hpp  UniformBuffer.hpp  VertexArray.cpp  VertexBuffer.hpp
RigelRenderer/src/internal/render/: GBuffer.cpp  GBuffer.hpp  Render.cpp  Render.hpp  RenderHandler.cpp  RenderHandler.hpp  Renderer.cpp  Renderer.hpp
RigelRenderer/src/internal/utility/: FreeTypeUtility.cpp  Logger.hpp  RenderUtility.cpp  RenderUtility.hpp
RigelRenderer/src/objects/: Camera.cpp  DirectionalLight.cpp  Light.cpp  Object.cpp  PointLight.cpp  Scene.cpp  SpotLight.cpp
RigelRenderer/src/objects/Renderable/: RenderableMesh.cpp
RigelRenderer/src/objects/lights/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
Sandbox/: Build-Sandbox.lua  CMakeLists.txt
Sandbox/resources/models/cube/: cube.mtl
Sandbox/resources/shaders/: fragment_2d.glsl  fragment_3d.glsl  fragment_3d_lit.glsl  fragment_shadows.glsl  vertex_2d.glsl  vertex_3d.glsl  vertex_3d_lit.glsl  vertex_shadows.glsl
Sandbox/source/: main.cpp
Sandbox/source/materials/: Material2D.hpp  Material3D.cpp  MaterialShadows.cpp
Sandbox/src/: main.cpp
Sandbox/src/materials/: Material2D.cpp  Material2D.hpp  Material3D.cpp  Material3D.hpp  MaterialShadows.cpp  MaterialShadows.hpp  TestMaterial.cpp  TestMaterial.hpp
Scripts/: Setup-Linux.sh  Setup-Windows.bat
dependencies/assimp/: CMakeLists.txt
dependencies/freetype/: freetype.h  ftimage.h
dependencies/freetype/config/: ftoption.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/obj_loader/: obj_loader.h
dependencies/stb_image/: stb_image.h
